--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./fd.jpg" />
+    <img src="./fd.jpg" width="100%" height="100%"/>
 </body>
 </html>
